force-app/main/default/objects/Apttus_Config2__AppliedRuleActionInfo__c/fields/Apttus_Config2__AppliedRuleInfoId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AppliedRuleInfoId__c</fullName>
    <description>References the applied rule info record</description>
    <label>Applied Rule Info</label>
    <referenceTo>Apttus_Config2__AppliedRuleInfo__c</referenceTo>
    <relationshipLabel>Applied Rule Action Infos</relationshipLabel>
    <relationshipName>AppliedRuleActionInfos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>