force-app/main/default/objects/Apttus_Config2__AppliedRuleActionInfo__c/fields/Apttus_Config2__ConfigurationId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ConfigurationId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References the configuration record to which the rule is applied</description>
    <label>Configuration</label>
    <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
    <relationshipLabel>Applied Rule Action Infos</relationshipLabel>
    <relationshipName>AppliedRuleActionInfos</relationshipName>
    <type>Lookup</type>
</CustomField>