force-app/main/default/objects/Apttus_Config2__AppliedRuleActionInfo__c/fields/Apttus_Config2__IsTargetOption__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsTargetOption__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the target include or exclude products should be present in the shopping cart as options.</description>
    <label>Is Target Option</label>
    <type>Checkbox</type>
</CustomField>