force-app/main/default/objects/Apttus_Config2__AppliedRuleActionInfo__c/fields/Apttus_Config2__TriggeringProductIds__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TriggeringProductIds__c</fullName>
    <description>The list of ids representing the products that caused the rule to trigger.</description>
    <label>Triggering Product Ids</label>
    <length>8192</length>
    <type>LongTextArea</type>
</CustomField>